--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "homepage": "https://github.com/AndyLPK247/jasmine-node-js-example",
   "dependencies": {
     "frisby": "^2.0.10",
-    "jasmine": "^2.8.0"
+    "jasmine": "^2.8.0",
+    "rewire": "^3.0.2",
+    "sinon": "^4.1.3"
   }
 }
